# codeSpectra

./: .gitignore  __init__.py  designSpectra.py  pyproject.toml
codeSpectra/: designSpectra.py
codeSpectra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
